fix: White space around no-JS browse concepts btn

--- a/_sass/geolexica_home.scss
+++ b/_sass/geolexica_home.scss
@@ -32,6 +32,9 @@ body.home {
         text-decoration: none;
         background: $linkColor;
         color: $linkColorInverse;
+
+        margin-top: 1em;
+        margin-bottom: 1.5em;
       }
 
       .search-controls {
